# deja-func

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deja/: __init__.py  cli.py  dupes.py  hook.py  index.py  mcp.py  render.py  search.py  semantic.py  serialize.py  sigshape.py  stale.py  stats.py  walker.py  watch.py
deja/parsers/: __init__.py  base.py  javascript.py  python.py
tests/: __init__.py  test_cli.py  test_dupes.py  test_find.py  test_hook.py  test_index.py  test_javascript_parser.py  test_mcp.py  test_python_parser.py  test_semantic.py  test_serialize.py  test_sigshape.py  test_stale.py  test_stats.py  test_walker.py  test_watch.py
