[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deja-func"
version = "0.1.0"
description = "A tiny local CLI that indexes every function in your codebase so you (and your AI agents) stop reinventing the wheel."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rwrife" }]
keywords = ["cli", "code-search", "functions", "deduplication", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

# Core stays dependency-light. pathspec lands in M2 (.gitignore-aware walk);
# rapidfuzz arrives in M3 (fuzzy search).
dependencies = [
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/rwrife/deja-func"
Repository = "https://github.com/rwrife/deja-func"

[project.scripts]
deja = "deja.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["deja"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
